--- a/style.css
+++ b/style.css
@@ -43,11 +43,11 @@ body{
     }
 
     .span-1{
-        color: blue;
+        color: black;
     }
 
     .span-2{
-        color: blue;
+        color: black;
     }
 
     .secao-1{
