--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: white;
+    background-color: rgb(177, 210, 233);
 }
     .header{
         padding: 20px;
@@ -7,7 +7,7 @@ body{
 
     .links{
         display: inline;
-        margin-left: 280px;
+        margin-left: 200px;
     }
 
     .links a{
@@ -33,7 +33,7 @@ body{
     .link-a-2{
         background-color: transparent;
         border: aqua solid 2px;
-        color:aqua;
+        color:white;
         font-weight: bold;
     }
 
@@ -73,4 +73,23 @@ body{
         margin-top: 30px;
     
     }
+    .ofea{
+        width: 400px;
+        margin: 0 auto;
+    }
+
+    .ofea img{
+        width: 100%;
+        border-radius: 100px;
+    }
     
+    .secao-3{
+
+        width: 500px;
+        margin-left: 600px;
+        margin-top: -280px;
+
+    }
+
+
+
