--- a/Vscode-main/style.css
+++ b/Vscode-main/style.css
@@ -99,6 +99,19 @@ body{
 
 
     }
+    .professores{
+
+
+    }
+    .professores img{
+
+
+    }
+    .secao-5{
+        
+        width: 100%;
+        border-radius: 100px;
+    }
 
 
 
